--- a/DnDCharacterSheet/MainPage.xaml
+++ b/DnDCharacterSheet/MainPage.xaml
@@ -3,111 +3,60 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:DnDCharacterSheet"
+    xmlns:userControl="using:DnDCharacterSheet.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Loaded="Page_Loaded">
-
-    <Pivot x:Name="rootPivot" Title="{Binding Name}">
-        <PivotItem Header="Overview">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <StackPanel Grid.Column="0" Orientation="Vertical" Height="Auto">
-                    <TextBlock Text="Strength"
-                                Style="{StaticResource SubtitleTextBlockStyle}"
-                                HorizontalAlignment="Center"/>
-                    <TextBlock Name="Strength" 
-                                Text="{Binding Strength}"
-                                Style="{StaticResource BodyTextBlockStyle}"
-                                HorizontalAlignment="Center"/>
-                    <TextBlock Name="StrengthModifier" 
-                                Text="{Binding StrengthModifier}"
-                                Style="{StaticResource BodyTextBlockStyle}"
-                                HorizontalAlignment="Center"/>
+    <StackPanel>
+        <CommandBar>
+            <AppBarToggleButton Icon="Edit" Label="Edit" Click="CommandBar_Edit_Click" />
+            <CommandBar.SecondaryCommands>
+                <AppBarButton Icon="Add" Label="Add new armor" Name="AddArmor" Click="CommandBar_AddArmor_Click" />
+                <AppBarButton Icon="Add" Label="Add new weapon" Name="AddWeapon" Click="CommandBar_AddWeapon_Click" />
+                <AppBarButton Icon="Add" Label="Add new skill" Name="AddSkill" Click="CommandBar_AddSkill_Click" />
+                <AppBarButton Icon="Add" Label="Add new adventuring item" Name="AddAdventuringItem" Click="CommandBar_AddAdventuringItem_Click" />
+            </CommandBar.SecondaryCommands>
+        </CommandBar>
+        <SplitView IsPaneOpen="False"
+                   DisplayMode="CompactInline"
+                   MinHeight="200">
+            <SplitView.Pane>
+                <StackPanel>
+                    <AppBarButton Icon="View" Width="48" Click="NavPane_Overview_Click" />
+                    <AppBarButton Label="Actions" Width="48" Click="NavPane_Actions_Click" />
                 </StackPanel>
-                <StackPanel Grid.Column="1" Orientation="Vertical" Height="Auto">
-                    <TextBlock Text="Dexterity"
-                                Style="{StaticResource SubtitleTextBlockStyle}"
-                                HorizontalAlignment="Center"/>
-                    <TextBlock Name="Dexterity" 
-                                Text="{Binding Dexterity}"
-                                Style="{StaticResource BodyTextBlockStyle}"
-                                HorizontalAlignment="Center"/>
-                    <TextBlock Name="DexterityModifier" 
-                                Text="{Binding DexterityModifier}"
-                                Style="{StaticResource BodyTextBlockStyle}"
-                                HorizontalAlignment="Center"/>
+            </SplitView.Pane>
+            <SplitView.Content>
+                <Frame Name="CurrentContentControl" />
+            </SplitView.Content>
+        </SplitView>
+    </StackPanel>
+    <!--<Pivot x:Name="rootPivot" Title="{Binding Name}" PivotItemLoading="OnLoadingPivotItem">-->
+        
+        <!--<PivotItem Header="Attacks">
+                <TextBlock Text="Content of pivot item 2."/>
+            </PivotItem>
+            <PivotItem Header="Items">
+                <TextBlock Text="Content of pivot item 3."/>
+            </PivotItem>
+            <PivotItem Header="Add Armor">
+                <StackPanel>
+                    <TextBox Name="ArmorName" PlaceholderText="Name"></TextBox>
+                    <TextBox Name="ArmorCost" PlaceholderText="Cost"></TextBox>
+                    <ComboBox Name="ArmorMoneyType"></ComboBox>
+                    <TextBox Name="ArmorWeight" PlaceholderText="Weight (lbs.)"></TextBox>
+                    <TextBox Name="ArmorNote" PlaceholderText="Additional information"></TextBox>
+                    <Button Click="Add_Armor_Click">Add</Button>
+                    <ListView Name="ArmorList">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Name}" />
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
                 </StackPanel>
-                <StackPanel Grid.Column="2" Orientation="Vertical" Height="Auto">
-                    <TextBlock Text="Constitution"
-                                Style="{StaticResource SubtitleTextBlockStyle}"
-                                HorizontalAlignment="Center"/>
-                    <TextBlock Name="Constitution" 
-                                Text="{Binding Constitution}"
-                                Style="{StaticResource BodyTextBlockStyle}"
-                                HorizontalAlignment="Center"/>
-                    <TextBlock Name="ConstitutionModifier" 
-                                Text="{Binding ConstitutionModifier}"
-                                Style="{StaticResource BodyTextBlockStyle}"
-                                HorizontalAlignment="Center"/>
-                </StackPanel>
-                <StackPanel Grid.Column="3" Orientation="Vertical" Height="Auto">
-                    <TextBlock Text="Intelligence"
-                                Style="{StaticResource SubtitleTextBlockStyle}"
-                                HorizontalAlignment="Center"/>
-                    <TextBlock Name="Intelligence" 
-                                Text="{Binding Intelligence}"
-                                Style="{StaticResource BodyTextBlockStyle}"
-                                HorizontalAlignment="Center"/>
-                    <TextBlock Name="IntelligenceModifier" 
-                                Text="{Binding IntelligenceModifier}"
-                                Style="{StaticResource BodyTextBlockStyle}"
-                                HorizontalAlignment="Center"/>
-                </StackPanel>
-                <StackPanel Grid.Column="4" Orientation="Vertical" Height="Auto">
-                    <TextBlock Text="Wisdom"
-                                Style="{StaticResource SubtitleTextBlockStyle}"
-                                HorizontalAlignment="Center"/>
-                    <TextBlock Name="Wisdom" 
-                                Text="{Binding Wisdom}"
-                                Style="{StaticResource BodyTextBlockStyle}"
-                                HorizontalAlignment="Center"/>
-                    <TextBlock Name="WisdomModifier" 
-                                Text="{Binding WisdomModifier}"
-                                Style="{StaticResource BodyTextBlockStyle}"
-                                HorizontalAlignment="Center"/>
-                </StackPanel>
-                <StackPanel Grid.Column="5" Orientation="Vertical" Height="Auto">
-                    <TextBlock Text="Charisma"
-                               Style="{StaticResource SubtitleTextBlockStyle}"
-                                HorizontalAlignment="Center"/>
-                    <TextBlock Name="Charisma" 
-                                Text="{Binding Charisma}"
-                                Style="{StaticResource BodyTextBlockStyle}"
-                                HorizontalAlignment="Center"/>
-                    <TextBlock Name="CharismaModifier" 
-                                Text="{Binding CharismaModifier}"
-                                Style="{StaticResource BodyTextBlockStyle}"
-                                HorizontalAlignment="Center"/>
-                </StackPanel>
-            </Grid>
-        </PivotItem>
-        <PivotItem Header="Attacks">
-            <TextBlock Text="Content of pivot item 2."/>
-        </PivotItem>
-        <PivotItem Header="Items">
-            <TextBlock Text="Content of pivot item 3."/>
-        </PivotItem>
-    </Pivot>
+            </PivotItem>
+        </Pivot>-->
 
 </Page>
